# ACM_Summer_School_2024

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.devcontainer/session II/: devcontainer.json
.devcontainer/session III/: devcontainer.json
.github/workflows/: main.yml
hands-on/: CITATION.cff  Dockerfile  README.md  Tutorial.ipynb  dashboard.py
hands-on/.devcontainer/: devcontainer.json
hands-on/GEOtiled/geotiled/: LICENSE  setup.cfg
hands-on/GEOtiled/geotiled/src/: geotiled.py
hands-on/GEOtiled/geotiled/src/geotiled.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hands-on/idx_data/: Tennessee_terrain_parameters.idx
hands-on/openvisuspy/: .gitignore  README.md  TODO.md  diagram.drawio  openvisus.env  pyproject.toml
hands-on/openvisuspy/examples/create_streamable/: ReadMe.md  create_streamable.py  run.ipynb
hands-on/openvisuspy/examples/experimental/: 2kbit1.html  david_subsampled.html  index.html  jupyterlite-example.ipynb  server.py
hands-on/openvisuspy/examples/notebooks/: ov-dashboards.ipynb  ov-retina-rabbit-matplot.ipynb  ov-signal.ipynb  test-bokeh.ipynb  test-ipywidgets.ipynb  test-pyvista.ipynb
hands-on/openvisuspy/examples/python/: test-pyvista.py  test-vtkvolume.py
hands-on/openvisuspy/scripts/: new_tag.py  new_tag.sh
hands-on/openvisuspy/src/openvisuspy/: backend.py  backend_cpp.py  backend_py.py  utils.py
hands-on/openvisuspy/src/openvisuspy/dashboards/: app_hooks.py  main.py
hands-on/session II/: 1.Tutorial.ipynb  2.Explore_Data.ipynb  README.md
hands-on/session III/: 00_Tutorial_III_PetascaleAnalysis.ipynb  (+4 more)
(+35 files in other folders)
