[metadata]
name = geotiled
version = 0.0.1
author = Camila Roa and compiled by Jay Ashworth of GCLab
author_email = taufer@utk.edu
description = Package with all of the required functions and classes for GEOtiled and its associated workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TauferLab/GEOtiled
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    numpy
    matplotlib
    tqdm
    geopandas
    GDAL
    pandas


[options.package_data]
* = *.md

[options.packages.find]
where = src
